--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 	"type": "module",
 	"dependencies": {
 		"express": "^4.18.2",
+		"graphql": "^16.8.1",
 		"graphql-request": "^6.1.0",
 		"node-fetch": "^3.3.2"
 	}
